<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_procurar"
        android:icon="@drawable/ic_gps_fixed_black_24dp"
        android:title="@string/onde_procurar" />
    <item
        android:id="@+id/nav_perdidos"
        android:icon="@drawable/ic_person_pin_circle_black_24dp"
        android:title="@string/perdidos" />
    <item
        android:id="@+id/nav_delegacias"
        android:icon="@drawable/ic_domain_black_24dp"
        android:title="@string/delegacia" />
        <item
            android:id="@+id/termoResp"
            android:icon="@drawable/ic_termos_uso"
            android:title="@string/termos_uso" />
</group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/sobre" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/sair" />
        </menu>
    </item>


</menu>
