<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.rebec.cadevoce.view.fragments.HomeFragment"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logooficial" />

    <Button
        android:id="@+id/buscarDesaparecido"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        android:drawableEnd="?android:attr/actionModeWebSearchDrawable"
        android:drawableRight="?android:attr/actionModeWebSearchDrawable"

        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cadastrarDesaparecido"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:drawableRight="@android:drawable/ic_menu_edit"

        android:text="@string/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarDesaparecido" />

    <Button
        android:id="@+id/cadastrosRecentes"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:drawableRight="?android:attr/actionModePasteDrawable"
        android:text="@string/btnCadastrosRecentes"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cadastrarDesaparecido"
        app:layout_constraintTop_toBottomOf="@+id/cadastrarDesaparecido" />

    <Button
        android:id="@+id/meusCadastros"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:drawableRight="@android:drawable/star_big_off"
        android:text="@string/btnMeusCadastros"
        app:layout_constraintEnd_toEndOf="@+id/cadastrosRecentes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cadastrosRecentes"
        app:layout_constraintTop_toBottomOf="@+id/cadastrosRecentes" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="287dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="297dp" />


</android.support.constraint.ConstraintLayout>