<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.rebec.cadevoce.view.BuscarNomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:padding="16dp">

        <!--Nome-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtMdNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/md_nome"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <!--Estado-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtMdEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:errorEnabled="true">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/estado_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/md_estado"
                app:errorEnabled="true" />

        </android.support.design.widget.TextInputLayout>


        <!--Cidade-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtMdCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/edtAutoCompleteCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/md_cidade"
                app:errorEnabled="true"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>